fix home overflow-x to hidden

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ img {
 .home {
   box-sizing: border-box;
   overflow-y: auto;
+  overflow-x: hidden;
   width: 100%;
 }
 
